<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#692BF8"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/big_card_size"
        android:layout_height="@dimen/big_card_size"
        android:elevation="@dimen/cardview_default_elevation"
        app:cardBackgroundColor="#2196F3"
        app:cardCornerRadius="20dp"
        app:cardElevation="2dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="@dimen/menu_bar_size"
            android:layout_height="@dimen/menu_bar_size"
            android:layout_marginLeft="290dp"
            android:layout_marginTop="5dp"
            app:srcCompat="@drawable/ic_menu_symbol_of_three_parallel_lines_svgrepo_com" />

        <TextView
            android:layout_width="223dp"
            android:layout_height="50dp"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="48dp"
            android:text="@string/Date"
            android:textColor="@color/current_weather_info"
            android:textColorHighlight="#F1ECC5"
            android:textSize="25sp"
            android:textStyle="normal" />

        <TextView
            android:layout_width="223dp"
            android:layout_height="50dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="90dp"
            android:text="@string/City_name"
            android:textColor="@color/white"
            android:textColorHighlight="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="103dp"
            android:layout_height="90dp"
            android:layout_marginLeft="125dp"
            android:layout_marginTop="180dp"
            app:srcCompat="@drawable/ic_cloudy_svgrepo_com" />

        <TextView
            android:layout_width="223dp"
            android:layout_height="50dp"
            android:layout_marginLeft="95dp"
            android:layout_marginTop="320dp"
            android:text="@string/current_weather_info"
            android:textColor="@color/current_weather_info"
            android:textColorHighlight="#FAEEEE"
            android:textSize="25sp" />

        <TextView
            android:layout_width="211dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="135dp"
            android:layout_marginTop="340dp"
            android:text="@string/Temperature"
            android:textColor="@color/temperature_show"
            android:textColorHighlight="#F9FAF3"
            android:textSize="45sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="333dp"
            android:layout_height="204dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="400dp"
            android:layout_marginRight="100dp"
            app:cardBackgroundColor="@color/inner_card"
            app:cardCornerRadius="20dp"
            app:cardElevation="6dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="@dimen/icon_humidity_feel_icon_size"
                android:layout_height="@dimen/icon_humidity_feel_icon_size"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="60dp"
                app:srcCompat="@drawable/ic_wind" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="@dimen/icon_humidity_feel_icon_size"
                android:layout_height="@dimen/icon_humidity_feel_icon_size"
                android:layout_marginLeft="140dp"
                android:layout_marginTop="60dp"
                app:srcCompat="@drawable/ic_humidity" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="@dimen/icon_humidity_feel_icon_size"
                android:layout_height="@dimen/icon_humidity_feel_icon_size"
                android:layout_marginLeft="240dp"
                android:layout_marginTop="60dp"
                app:srcCompat="@drawable/ic_feels_like" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="@dimen/extra_strings_feel_humidity_size"
                android:layout_height="@dimen/extra_strings_feel_humidity_size"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/wind"
                android:textColor="@color/white_blured"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="@dimen/extra_strings_feel_humidity_size"
                android:layout_height="@dimen/extra_strings_feel_humidity_size"
                android:layout_marginLeft="115dp"
                android:layout_marginTop="20dp"
                android:text="@string/humidity"
                android:textColor="@color/white_blured"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="@dimen/extra_strings_feel_humidity_size"
                android:layout_height="@dimen/extra_strings_feel_humidity_size"
                android:layout_marginLeft="230dp"
                android:layout_marginTop="20dp"
                android:text="@string/feeling"
                android:textColor="@color/white_blured"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="@dimen/extra_strings_feel_humidity_size"
                android:layout_height="@dimen/extra_strings_feel_humidity_size"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="120dp"
                android:text="@string/wind_value"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="140dp"
                android:layout_marginTop="120dp"
                android:text="@string/humidity_value"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="250dp"
                android:layout_marginTop="120dp"
                android:text="@string/feeling_value"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </androidx.cardview.widget.CardView>


    </androidx.cardview.widget.CardView>

</LinearLayout>